<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/Reservation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bad_script"
                android:text="@string/reservation"
                android:textSize="36sp" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="102dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:autoSizeTextType="none"
                    android:text="@string/name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="371dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:ems="10"
                    android:hint="Name"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Gender"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/gender" />

                <RadioGroup
                    android:id="@+id/rgGender"
                    android:layout_width="313dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButtonMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/radioButtonFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="52dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/phone" />

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:ems="10"
                    android:hint="@string/phoneNum"
                    android:inputType="phone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="52dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/pax" />

                <EditText
                    android:id="@+id/pax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:ems="10"
                    android:hint="@string/PaxNum"
                    android:inputType="phone" />


            </LinearLayout>

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:calendarViewShown="false"
                android:timePickerMode="spinner" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/table"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="Table :" />

                <CheckBox
                    android:id="@+id/smoking"
                    android:layout_width="279dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Smoking Area" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Confirm" />

                <Button
                    android:id="@+id/reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Reset" />
            </LinearLayout>

            <TextView
                android:id="@+id/display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
